--- a/style.css
+++ b/style.css
@@ -277,7 +277,7 @@ span {
   margin: 5rem 0;
 }
 section .about {
-  padding: 6rem;
+  padding: 3rem;
 }
 .about-container {
   display: grid;
@@ -668,11 +668,13 @@ footer .copyright {
   }
 }
 
-@media (max-width: 1022px) {
+@media (max-width: 1025px) {
   .home {
-    display: inline-flex;
+    display: flex;
+    align-items: center;
     gap: 20rem;
   }
+
   header {
     padding: 2rem 3%;
   }
@@ -716,12 +718,6 @@ footer .copyright {
     margin: 0 auto;
   }
 }
-@media (max-width: 900px) {
-  .home {
-    display: inline-flex;
-    gap: 20rem;
-  }
-}
 
 @media (max-width: 898px) {
   #menu-icon {
@@ -744,7 +740,7 @@ footer .copyright {
   .home {
     display: flex;
     align-items: center;
-    justify-content: center;
+    justify-content: space-between;
     flex-direction: column-reverse;
     /* margin: 5rem 4rem; */
   }
@@ -1005,16 +1001,7 @@ footer .copyright {
   .about-container {
     grid-template-columns: repeat(1, 1fr);
   }
-  .service h4 {
-    font-size: 2rem;
-    margin-bottom: 2rem;
-  }
-  .service p {
-    font-size: 5rem;
-    line-height: 2;
-    font-weight: 400;
-    font-style: oblique;
-  }
+
   .service-container {
     margin-bottom: 12px;
     border-radius: 10px 10px 10px 10px;
@@ -1038,9 +1025,57 @@ footer .copyright {
   .home-img img {
     position: relative;
     top: 4rem;
-    width: 50vw;
-    height: 60vw;
+    width: 55vw;
+    height: 70vw;
     background-size: cover;
     cursor: pointer;
+  }
+  .contact .heading {
+    font-size: 6rem;
+    text-align: center;
+    margin: 5rem 0;
+  }
+}
+
+@media (max-width: 360px) {
+  .home-img img {
+    position: relative;
+    top: 4rem;
+    width: 55vw;
+    height: 70vw;
+    background-size: cover;
+    cursor: pointer;
+  }
+  .service-info h4 {
+    font-size: 1.2rem;
+    font-weight: 900;
+    margin: auto;
+  }
+  .competence .heading {
+    font-size: 5rem;
+    text-align: center;
+    margin: 5rem 0;
+  }
+  .service-info p {
+    margin-top: 1rem;
+    font-size: 1.2rem;
+    font-weight: 500;
+    max-height: 100px;
+    line-height: 1.5;
+  }
+  .about .heading {
+    font-size: 6rem;
+    text-align: center;
+    margin: 5rem 0;
+  }
+  .contact .heading {
+    font-size: 6rem;
+    text-align: center;
+    margin: 5rem 0;
+  }
+  .profile {
+    border-radius: 10px;
+    margin: auto;
+    background-size: cover;
   }
 }
