--- a/style.css
+++ b/style.css
@@ -483,7 +483,7 @@ section .about {
 .service-info p {
   margin-top: 1.4rem;
   font-size: 1.6rem;
-  font-weight: 600;
+  font-weight: 400;
   max-height: 100px;
   line-height: 1.7;
 }
@@ -669,6 +669,10 @@ footer .copyright {
 }
 
 @media (max-width: 1025px) {
+  section {
+    min-height: 50vh;
+    padding: 12rem 12% 10rem;
+  }
   .home {
     display: flex;
     align-items: center;
