--- a/style.css
+++ b/style.css
@@ -106,7 +106,7 @@ span {
 .home-content h3 {
   margin-bottom: 1.5rem;
   margin-top: 1rem;
-  font-size: 3.5rem;
+  font-size: 3.2rem;
 }
 
 .home-content h1 {
@@ -475,7 +475,7 @@ section .about {
 
 .service-info h4 {
   color: #228be6;
-  font-size: 3rem;
+  font-size: 2.5rem;
   font-weight: 800;
   line-height: 2;
   margin: auto;
@@ -665,6 +665,10 @@ footer .copyright {
     margin-bottom: 7rem;
     grid-template-columns: repeat(2, 1fr);
     margin: 0 5rem;
+  }
+  .projet-container {
+    grid-template-columns: repeat(2, 1fr);
+    gap: 23px;
   }
 }
 
